Fix scroll state restoration when going back to URL with anchor.  Bug 204364, r=jkeiser, sr=dbaron, a=asa