layout/base/nsPresShell.cpp
@@ -4119,7 +4119,9 @@ PresShell::GoToAnchor(const nsAString& aAnchorName, PRBool aScroll)
 
   if (content) {
     // Flush notifications so we scroll to the right place
-    FlushPendingNotifications(PR_FALSE);
+    if (aScroll) {
+      FlushPendingNotifications(PR_FALSE);
+    }
     
     // Get the primary frame
     nsIFrame* frame = nsnull;
